ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_assignment_small2_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 18) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 23) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%8$}] (2) at (1, 19) { };
\node[font=\tiny] (note_0) at (-1.5, 18.5) {Const(8, -1.0)};
\node[font=\tiny] (note_1) at (-1.5, 19.5) {Assign(7, 0)};
\node[font=\tiny] (note_2) at (-1.5, 20.5) {Const(8, -1.0)};
\node[font=\tiny] (note_3) at (-1.5, 21.5) {Jump(7)};
\node[font=\tiny] (note_4) at (-1.5, 22.5) {Block(7)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);


                \end{tikzpicture}
            \end{document}
