ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_assignment_small3_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (2) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 2) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Assign(7, 0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(8, -1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Assign(7, 0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Const(8, -1.0)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Jump(7)};
\node[font=\tiny] (note_5) at (-1.5, 5.5) {Block(7)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);


                \end{tikzpicture}
            \end{document}
