ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_globals_writes_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (7) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (14) at (1, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(-1, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [], [2])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (6) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (9) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (10) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (11) at (6, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (12) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (13) at (6, 3) { };
\node[font=\tiny] (note_3) at (3.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_4) at (3.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_5) at (3.5, 2.5) {Return([-1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (6) [loop right] edge  node { } (6);
		\path[->, blue] (8) [bend right] edge  node { } (10);
		\path[->, blue] (8) [bend right] edge  node { } (11);
		\path[->, blue] (6) [bend right] edge  node { } (10);
		\path[->, blue] (6) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (14);


                \end{tikzpicture}
            \end{document}
