ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_if_else_offset_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 12) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (1, 12) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (3) at (1, 5) { };
\node[font=\tiny] (note_0) at (-1.5, 4.5) {Const(1, 2.0)};
\node[font=\tiny] (note_1) at (-1.5, 5.5) {Const(2, 3.0)};
\node[font=\tiny] (note_2) at (-1.5, 6.5) {Jump(3)};
\node[font=\tiny] (note_3) at (-1.5, 7.5) {Block(2)};
\node[font=\tiny] (note_4) at (-1.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_5) at (-1.5, 9.5) {Jump(3)};
\node[font=\tiny] (note_6) at (-1.5, 10.5) {Block(3)};
\node[font=\tiny] (note_7) at (-1.5, 11.5) {Assign(3, 1)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);


                \end{tikzpicture}
            \end{document}
