ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_memory_load_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (3) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (4) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (5) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (6) at (1, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (7) at (1, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (8) at (3, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (9) at (2, 8) { };
\node[font=\tiny] (note_0) at (-1.5, 2.5) {Const(1, -12345.0)};
\node[font=\tiny] (note_1) at (-1.5, 3.5) {Store(1, 0.0, 0)};
\node[font=\tiny] (note_2) at (-1.5, 4.5) {Const(4, 8.0)};
\node[font=\tiny] (note_3) at (-1.5, 5.5) {Load(5, 0.0, 4)};
\node[font=\tiny] (note_4) at (-1.5, 6.5) {Const(6, 8.0)};
\node[font=\tiny] (note_5) at (-1.5, 7.5) {Load(7, 0.0, 6)};
\node[font=\tiny] (note_6) at (-1.5, 8.5) {Kill(7)};
\node[font=\tiny] (note_7) at (-1.5, 9.5) {Kill(6)};
\node[font=\tiny] (note_8) at (-1.5, 10.5) {Return([])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);


                \end{tikzpicture}
            \end{document}
