ifds/src/tests/icfg/snapshots/ifds__tests__icfg__sparse__test_ir_self_loop_dot.snap
---
source: src/tests/icfg/sparse.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (10) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (20) at (1, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_1) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_2) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_3) at (-1.5, 4.5) {Return([0])};
\node[font=\tiny] (note_4) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_5) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_6) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_7) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_8) at (-1.5, 4.5) {Return([0])};
\node[font=\tiny] (note_9) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_10) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_11) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_12) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_13) at (-1.5, 4.5) {Return([0])};
\node[font=\tiny] (note_14) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_15) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_16) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_17) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_18) at (-1.5, 4.5) {Return([0])};
\node[font=\tiny] (note_19) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_20) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_21) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_22) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_23) at (-1.5, 4.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (2) [bend right] edge  node { } (0);
		\path[->, blue] (2) [bend right] edge  node { } (14);
		\path[->, blue] (2) [bend right] edge  node { } (9);
		\path[->, blue] (1) [bend right] edge  node { } (0);
		\path[->, blue] (1) [bend right] edge  node { } (14);
		\path[->, blue] (1) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (20);
		\path[->, blue] (2) [bend right] edge  node { } (20);
		\path[->, blue] (1) [bend right] edge  node { } (20);


                \end{tikzpicture}
            \end{document}
